# RTree

./: .gitignore  CMakeLists.txt  compile.sh  readMe.md
cmake/Modules/: FindGlib.cmake
headers/: BBox.h  Node.h  Point.h  Polygon.h  PriorityQueue.h  RTree.h  testUtils.h  types.h
output/: rtree.txt
scripts/: plotRtree.py  plotSimple.py
src/: BBox.c  Node.c  Point.c  Polygon.c  PriorityQueue.c  RTree.c  main.c  test.c
tests/: RTree_test.cc  all_tests.cc  bbox_tests.cc  node_test.cc  point_tests.cc  priority_queue_test.cc
